--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "altogic": "^2.2.2",
     "cookies-next": "^2.1.1",
     "next": "13.0.1",
+    "primeflex": "^3.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
